--- a/src/apps/1688Admin/webapp/stylus/variables.styl
+++ b/src/apps/1688Admin/webapp/stylus/variables.styl
@@ -8,7 +8,7 @@ COMMON_BORDER_RADIUS = 2px // common border redius
 IMG_DIR = '../images/'
 FONT_DIR = '../fonts/'
 
-BODY_BG = GRAY_F9
+BODY_BG = WHITE
 DEFAULT_SPACE = $default-space//0.08rem
 COMMON_BORDER_COLOR = GRAY_F9
 COMMON_BORDER_WIDTH = 1px
