--- a/src/apps/1688Admin/webapp/stylus/variables.styl
+++ b/src/apps/1688Admin/webapp/stylus/variables.styl
@@ -25,6 +25,7 @@ LEFT_WIDTH = 2rem
 FOOTER_HEIGHT = 0.3rem
 Z_INDEX_TOP = 300
 Z_INDEX_LEFT = 200
+Z_INDEX_LEFT_MOBILE = 400
 Z_INDEX_FOOTER = 100
 Z_INDEX_RIGHT = 1
 
