--- a/src/apps/1688Admin/webapp/stylus/index.styl
+++ b/src/apps/1688Admin/webapp/stylus/index.styl
@@ -2,6 +2,7 @@
 @require 'color'
 @require 'variables'
 @require 'utils'
+@require 'iscroll'
 
 
 a
@@ -49,11 +50,20 @@ body
         bottom 0px
         left 0px
         z-index Z_INDEX_LEFT
+    .mobile-menu-mask
+        position absolute
+        top 0
+        right 0
+        bottom 0
+        left 0
+        background-color alpha(black, 0.3)
+        z-index Z_INDEX_LEFT_MOBILE - 10
+        display none
     .right-container
         position absolute
         left LEFT_WIDTH
         top TOP_HEIGHT
-        bottom FOOTER_HEIGHT
+        bottom 0
         right 0px
         z-index Z_INDEX_RIGHT
     .footer-container
@@ -63,22 +73,49 @@ body
         bottom 0px
         height FOOTER_HEIGHT
         z-index Z_INDEX_FOOTER
-    @media SCREEN_SM
-        .top-container
-            height TOP_HEIGHT_MOBILE
-        .left-container
-            top TOP_HEIGHT_MOBILE
-        .right-container
-            top TOP_HEIGHT_MOBILE
     @media SCREEN_XS
         .top-container
             height TOP_HEIGHT_MOBILE
         .left-container
-            top TOP_HEIGHT_MOBILE
+            transition left ease-in-out COMMON_ANIM_TIME
+            top 0
+            left -1*LEFT_WIDTH
+            z-index Z_INDEX_LEFT_MOBILE
+            &.show
+                left 0
+        .mobile-menu-mask
+            display none
+            &.show
+                display block
         .right-container
-            top TOP_HEIGHT_MOBILE    
+            top TOP_HEIGHT_MOBILE  
+            left 0  
             
+.iscroller {
+	position: absolute;
+	z-index: 1;
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
+	width: 100%;
+	-webkit-transform: translateZ(0);
+	-moz-transform: translateZ(0);
+	-ms-transform: translateZ(0);
+	-o-transform: translateZ(0);
+	transform: translateZ(0);
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	-webkit-text-size-adjust: none;
+	-moz-text-size-adjust: none;
+	-ms-text-size-adjust: none;
+	-o-text-size-adjust: none;
+	text-size-adjust: none;
+}
 
+.main-iframe
+    width 100%
+    height 100%
 
 
 .border-round
